# pyhalomodel

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
halomodel/: cosmology.py  darkquest.py  halomodel.py
halomodel/tests/: benchmarks.py  make_benchmarks.py  test_HMx.py  test_power.py
halomodel/tests/notebooks/: HMx.ipynb  power.ipynb
modules/: DarkQuest.py  constants.py  halomodel.py  utility_functions.py
notebooks/: DQ-comparison.ipynb  Fig-2_mass-function-bias.ipynb  Fig-3_power-spectra.ipynb  Fig-4_halo-profile.ipynb  Fig-5_HOD.ipynb  Fig-6_HMcode-DQ-comparison.ipynb  Fig-6_HMcode_DQ_comparison.ipynb  Fig-7_halo-cross-spectra.ipynb  Fig_1_powerspectra.ipynb  Fig_1_powerspectra_Fig_2_hmf_bias.ipynb  Fig_2_hmf_bias.ipynb  Fig_3_R_hh.ipynb  Fig_4_Halo_profile.ipynb  Fig_5_HOD.ipynb  Fig_6_HM_HMcode_DQ_comparison.ipynb  Fig_6_HMcode_DQ_comparison.ipynb  Fig_7_R_hh.ipynb  Fig_7_halo_cross_spectra.ipynb  HMcode-DQ-comparison.ipynb  HOD.ipynb  NFW-profile.ipynb  demo-advanced.ipynb  demo-basic.ipynb  demo-intermediate.ipynb  demo.ipynb  halo-cross-coefficient.ipynb  halo-cross-spectra.ipynb  mass-function-bias.ipynb  power-spectra.ipynb
notebooks/.ipynb_checkpoints/: Fig_1_powerspectra_Fig_2_hmf_bias-checkpoint.ipynb  Fig_5_HOD-checkpoint.ipynb  Fig_6_HM_HMcode_DQ_comparison-checkpoint.ipynb
pyhalomodel/: __init__.py  camb_stuff.py  constants.py  cosmology.py  darkquest.py  pyhalomodel.py  utility.py
pyhalomodel/common/: darkquest.py
src/: camb_stuff.py  darkquest.py  halomodel.py  utility.py
tests/: make_benchmarks.py  test_HMx.py  test_consistency.py  test_power.py
tests/notebooks/: HMx.ipynb  consistency.ipynb  halomod.ipynb  power.ipynb
