[tool.poetry]
name = "halomodel"
version = "0.1.0"
description = "Halo model power spectrum calculations"
authors = ["Alexander Mead <alexander.j.mead@googlemail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
numpy = "^1.24.1"
scipy = "^1.10.0"

[tool.poetry.group.dev.dependencies]
camb = "^1.3.6"
dark-emulator = "^1.0.23"
ipykernel = "^6.21.1"
matplotlib = "^3.6.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
