[tool.poetry]
name = "pyhalomodel"
version = "1.0.2"
description = "Halo model power spectrum calculations"
authors = ["Alexander Mead <alexander.j.mead@googlemail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/alexander-mead/pyhalomodel"
keywords = ["cosmology", "halo model", "dark matter", "dark energy", "galaxies"]
include = ["LICENSE"]

[tool.poetry.group.notebooks]
optional = true

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
numpy = "^1.24.1"
scipy = "^1.10.0"

[tool.poetry.group.dev.dependencies]
camb = "^1.4.0"
ipykernel = "^6.21.1"
matplotlib = "^3.6.3"

[tool.poetry.group.notebooks.dependencies]
dark-emulator = "^1.0.23"
hmf = "^3.4.4"
halomod = "^2.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
